# supahost

./: .dockerignore  .env.example  .gitignore  Cargo.toml  FIXES.md  LICENSE  README.md
apps/web/: Dockerfile  README.md  docker-entrypoint.sh  docker-migrate.mjs  docker-migrate.sh  middleware.ts  next-env.d.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/pricing/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/components/: session-provider.tsx  signout-button.tsx
apps/web/components/admin/: tenant-actions.tsx
apps/web/components/auth/: login-form.tsx  signup-form.tsx
apps/web/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  separator.tsx  (+1 more)
apps/web/lib/: auth.ts  db.ts  platform.ts
apps/web/prisma/: schema.prisma  seed.js
apps/web/types/: bcryptjs.d.ts  next-auth.d.ts
components/platform-api/: Cargo.toml  wasmcloud.toml
components/platform-api/src/: lib.rs
components/platform-api/wit/: world.wit
docs/: architecture.md  confidential-compute.md  kubernetes.md
infra/local/nats/: docker-compose.nats.yaml
infra/local/platform/: docker-compose.platform.yaml
infra/local/redis/: docker-compose.redis.yaml
infra/local/traefik/: docker-compose.traefik.yaml  traefik.yaml
infra/local/web/: docker-compose.web.yaml
scripts/: dev-down.sh  dev-up.sh  example-create-tenant.sh  repair-tenant-studio.sh  stripe-listen.sh
services/billing-service/: Cargo.toml
services/billing-service/src/: main.rs
services/platform-api/: Cargo.toml
services/platform-api/src/: main.rs
services/provisioner/: Cargo.toml
services/provisioner/src/: main.rs
services/provisioner/templates/: kong.yaml  tenant-compose.yaml
wadm/: platform.wadm.yaml
(+8 files in other folders)
