[package]
name = "billing-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-nats = "0.34"
axum = "0.7"
bytes = "1"
dotenvy = "0.15"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Stripe API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2"
futures-util = "0.3"
