[package]
name = "platform-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-nats = "0.34"
axum = { version = "0.7", features = ["json"] }
dotenvy = "0.15"
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
