[package]
name = "provisioner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-nats = "0.34"
dotenvy = "0.15"
futures-util = "0.3"
jsonwebtoken = "9"
rand = "0.8"
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
